Fix default stretched grid column width on module tags

--- a/media/css/firefox/family/components/_agreement.scss
+++ b/media/css/firefox/family/components/_agreement.scss
@@ -85,6 +85,7 @@
             .c-module-tag {
                 grid-column-start: 1;
                 grid-row-start: 1;
+                justify-self: start;
             }
 
             .c-content {
