--- a/media/css/firefox/family/components/modules/_passwords.scss
+++ b/media/css/firefox/family/components/modules/_passwords.scss
@@ -155,6 +155,10 @@
                 grid-template-rows: auto auto [overlap-start] $layout-sm [overlap-end] auto;
                 column-gap: $layout-lg;
 
+                .c-module-tag {
+                    justify-self: start;
+                }
+
                 .c-content {
                     align-self: center;
                     grid-column-start: column-one;
